# discord-lib

./: Cargo.toml
src/: discord.rs  gateway.rs  gateway_ws.rs  lib.rs  outer_wrapper.rs  send_message.rs  set_reaction.rs
src/discord_api/: mod.rs
src/discord_api/channel/: mod.rs
src/discord_api/guild/: mod.rs  roles.rs
