
[package]
# name = "wankord"
name = "discord_lib"
version = "0.1.0"
authors = ["Ryan <yarnnd@gmail.com>"]
edition = "2018"

[dependencies]
# futures01 = { version = "0.1.25", package = "futures" }

# futures-preview = "0.3.0-alpha.9"
# futures = { package = "futures-preview", version = "0.3.0-alpha.10", features = ["tokio-compat"] }
# futures = { package = "futures-preview", version = "0.3.0-alpha.19", features = ["compat", "async-await"] }
# futures = { version = "^0.3", features = ["compat"] }
futures = "^0.3"
# futures-util-preview = "0.2.2"

tokio = "^0.2"
tokio-timer = "^0.2.5"

# hyper = "0.12.13"
hyper = "0.13"
# hyper-tls = "0.3.0"
hyper-tls = "^0.4"
# hyper-rustls = "^0.20.0"
# hyper-rustls = { version = "^0.20.0", default-features = false, features = ["webpki-tokio", "tokio-runtime"] }

failure = "0.1.2"
# bytes = "0.4.9"
bytes = "^0.5.4"

serde = "^1.0.60"
serde_derive = "^1.0.60"
serde_repr = "0.1"
serde_json = "1.0.32"

percent-encoding = "^2.1.0"

[dependencies.tokio-tungstenite]
version = "^0.10"
# git = "https://github.com/snapview/tokio-tungstenite.git"
# rev = "e3174bf2a2b09b806bfafa00b2eadbcfe9bb9f9f"
