
[package]
# name = "wankord"
name = "discord_lib"
version = "0.1.0"
authors = ["Ryan <yarnnd@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3"

tokio = { version = "1", features = ["time"] }

reqwest = { version = "0.11.23", features = [] }

failure = "0.1.2"

serde = "1.0.60"
serde_derive = "^1.0.60"
serde_repr = "0.1"
serde_json = "1.0.32"

percent-encoding = "2.1.0"

[dependencies.tokio-tungstenite]
version = "0.21.0"
